--- a/RailwayTicketBooking/Views/Shared/_Layout.cshtml
+++ b/RailwayTicketBooking/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
         </nav>
         <div id="content">
             <div id="left_side">
+                @{Html.RenderAction("Index", "Account");}
                 <div id="whether">
                     <a href="https://clck.yandex.ru/redir/dtype=stred/pid=7/cid=1228/*https://pogoda.yandex.ru/kharkiv" target="_blank">
                         <img src="//info.weather.yandex.net/kharkiv/4.ru.png?domain=ru" border="0" alt="Яндекс.Погода" />
