--- a/RailwayTicketBooking/Views/Shared/_Layout.cshtml
+++ b/RailwayTicketBooking/Views/Shared/_Layout.cshtml
@@ -24,12 +24,11 @@
             <a href="/Booking" alt="Резервирование билетов"><div class="link_button">Резервирование</div></a>
             <a href="/Schedule" alt="Расписание"><div class="link_button">Расписание</div></a>
             <a href="/Hotline" alt="Горячая линия"><div class="link_button">Горячая линия</div></a>
-            <a href="/Stations" alt="Станции"><div class="link_button">Станции</div></a>
+            <a href="/Account/Registration" alt="Станции"><div class="link_button">Станции</div></a>
             <a href="/News" alt="Новости"><div class="link_button">Новости</div></a>
         </nav>
         <div id="content">
             <div id="left_side">
-                @{Html.RenderAction("Index", "Account");}
                 <div id="whether">
                     <a href="https://clck.yandex.ru/redir/dtype=stred/pid=7/cid=1228/*https://pogoda.yandex.ru/kharkiv" target="_blank">
                         <img src="//info.weather.yandex.net/kharkiv/4.ru.png?domain=ru" border="0" alt="Яндекс.Погода" />
