--- a/RailwayTicketBooking/Views/Home/Index.cshtml
+++ b/RailwayTicketBooking/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Home page";
+    ViewBag.Title = "Бронирование железнодорожных билетов";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
