--- a/RailwayTicketBooking/Views/Account/Login.cshtml
+++ b/RailwayTicketBooking/Views/Account/Login.cshtml
@@ -2,9 +2,12 @@
 
 @using (Html.BeginForm("Login", "Account", FormMethod.Post, new { @id = "log_form"}))
 {
-    @Html.LabelFor(Model => Model.Login, new { @class = "editor-label" })
-    @Html.TextBoxFor(Model => Model.Login, new { @class = "editor-field" })
-    @Html.LabelFor(Model => Model.Password, new { @class = "editor-label" })
-    @Html.PasswordFor(Model => Model.Password, new { @class = "editor-field" })
+    @Html.LabelFor(Model => Model.Login)
+    @Html.TextBoxFor(Model => Model.Login)
+    @Html.LabelFor(Model => Model.Password)
+    @Html.PasswordFor(Model => Model.Password)
+    @Html.LabelFor(Model => Model.RememberMe)
+    @Html.CheckBoxFor(Model => Model.RememberMe)
     <button type="submit">Войти</button>
+    <a href="/Account/Registration">Регистрация</a>
 }
