--- a/RailwayTicketBooking/Views/Shared/_Layout.cshtml
+++ b/RailwayTicketBooking/Views/Shared/_Layout.cshtml
@@ -21,12 +21,18 @@
             </h1>
         </header>
         <nav id="menu">
-            <a href="/Booking" alt="Резервирование билетов"><div class="link_button">Резервирование</div></a>
-            <a href="/Schedule" alt="Расписание"><div class="link_button">Расписание</div></a>
-            <a href="/Hotline" alt="Горячая линия"><div class="link_button">Горячая линия</div></a>
-            <a href="/Account/Registration" alt="Станции"><div class="link_button">Станции</div></a>
-            <a href="/News" alt="Новости"><div class="link_button">Новости</div></a>
+            <a href="/Booking" ><div class="link_button">Резервирование</div></a>
+            <a href="/Schedule" ><div class="link_button">Расписание</div></a>
+            <a href="/Hotline" ><div class="link_button">Горячая линия</div></a>
+            <a href="/Account/Registration" ><div class="link_button">Станции</div></a>
+            <a href="/News" ><div class="link_button">Новости</div></a>
         </nav>
+        @if (Session["user"] != null && HttpContext.Current.User.IsInRole("admin"))
+        {
+            <nav id="admin_menu">
+                <a href="/User" >Пользователи</a>&nbsp;&nbsp;
+            </nav>
+        }
         <div id="content">
             <div id="left_side">
                 <div id="user_card">
