Added UserController methods and fixed auth

--- a/RailwayTicketBooking/Content/Site.css
+++ b/RailwayTicketBooking/Content/Site.css
@@ -23,8 +23,7 @@ hr {
 }
 
 a {
-    text-decoration: none;
-    color: #232323;
+    color: #206697;
 }
 
 tr {
@@ -120,6 +119,13 @@ header {
     padding-left: 1px;
 }
 
+#admin_menu a
+{
+    text-decoration: none;
+    color: #390b0b;
+    font-size: 12pt;
+}
+
 .link_button {
     background: #5194c1;
     height: 40px;
@@ -177,10 +183,30 @@ header {
 /*Main side style*/
 
 #main_side {
-    padding-left: 10px;
+    padding: 0px 5px;
     width: 710px;
     height: 500px;
     float: left;
+}
+
+.data_table {
+    font-family: Calibri;
+    font-size: 13pt;
+    font-weight: 500;
+    background-color: #a4eabc;
+    border: double medium #206697;
+    width: 100%;
+}
+
+.data_table td {
+    border: 1px solid white;
+    text-align: center;
+    vertical-align: middle;
+}
+.table_header {
+    color: white;
+    background-color: #71CD90;
+    border: double medium #206697;
 }
 
 /*Text styles*/
