--- a/RailwayTicketBooking/Views/Account/Registration.cshtml
+++ b/RailwayTicketBooking/Views/Account/Registration.cshtml
@@ -9,7 +9,7 @@
 
 @using (Html.BeginForm("Registration", "Account", FormMethod.Post, new { @id = "reg_form" }))
 {
-    <hr noshade />
+    <hr noshade ="noshade"/>
     @Html.ValidationSummary()
     <fieldset title="Форма регистрации">
         <legend>Форма регистрации</legend>
