--- a/RailwayTicketBooking/Views/Booking/Index.cshtml
+++ b/RailwayTicketBooking/Views/Booking/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Резервирование билетов";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
