--- a/RailwayTicketBooking/Views/User/Edit.cshtml
+++ b/RailwayTicketBooking/Views/User/Edit.cshtml
@@ -63,7 +63,7 @@
                     @Html.Label("Роль пользователя", new { @class = "editor-label" })
                 </td>
                 <td>
-                    @Html.DropDownListFor(model => model.Id_UserRole, ViewBag.Roles as SelectList, new { @class = "editor-field" })
+                    @Html.DropDownListFor(model => model.Id_User_Role, ViewBag.Roles as SelectList, new { @class = "editor-field" })
                 </td>
             </tr>
             }
