Added documentation, TrainList fixed

--- a/RailwayTicketBooking/Views/SearchTicket/TrainList.cshtml
+++ b/RailwayTicketBooking/Views/SearchTicket/TrainList.cshtml
@@ -17,7 +17,6 @@
     <div id="accordion">
         @foreach (var item in Model)
         {
-    
             <h3>@item.DepTime | @item.Train.Code | @item.Train.Connection.Station1.Name - @item.Train.Connection.Station.Name <span style="float: right">@item.TicketCount мест</span></h3>
             <div>
                 <table class="data_table">
@@ -42,9 +41,10 @@
                         </td>
                     </tr>
                 </table>
-                <a href="/SearchTicket/TicketList?trainCode=@item.Train.Code">
-<div class="link_button">Выбрать</div>
-</a>
+                @{Html.BeginForm("TicketList", "SearchTicket", FormMethod.Get);}
+                @Html.Hidden("trainCode", item.Train.Code);
+                <button type="submit" >Выбрать</button>
+                @{Html.EndForm();}
             </div>
         }
     </div>
