--- a/RailwayTicketBooking/Views/Train/Index.cshtml
+++ b/RailwayTicketBooking/Views/Train/Index.cshtml
@@ -9,15 +9,17 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table>
+<table class="data_table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Code)
+            Код поезда
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Connection.Id)
+            Сообщение
         </th>
-        <th></th>
+        <th>
+            Действия
+        </th>
     </tr>
 
 @foreach (var item in Model) {
@@ -29,9 +31,9 @@
             @Html.DisplayFor(modelItem => item.Connection.Id)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Изменить", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Просмотреть", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Удалить", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
