--- a/RailwayTicketBooking/Views/UserRole/Delete.cshtml
+++ b/RailwayTicketBooking/Views/UserRole/Delete.cshtml
@@ -18,10 +18,10 @@
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Discription)
+         @Html.DisplayNameFor(model => model.Description)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.Discription)
+        @Html.DisplayFor(model => model.Description)
     </div>
 </fieldset>
 @using (Html.BeginForm()) {
