--- a/RailwayTicketBooking/Views/UserRole/Details.cshtml
+++ b/RailwayTicketBooking/Views/UserRole/Details.cshtml
@@ -17,10 +17,10 @@
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Discription)
+         @Html.DisplayNameFor(model => model.Description)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.Discription)
+        @Html.DisplayFor(model => model.Description)
     </div>
 </fieldset>
 <p>
