--- a/RailwayTicketBooking/Views/Shared/_Layout.cshtml
+++ b/RailwayTicketBooking/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/Scripts/jquery-ui-i18n.min.js")
+    @Scripts.Render("~/Scripts/Custom/Watch.js")
     @RenderSection("Scripts", required: false)
 </head>
 <body>
@@ -53,13 +54,14 @@
                 <div id="user_card">
                     @{Html.RenderAction("Login", "Account");}
                 </div>
+                <div id="watch" class="date_time"></div>
+                <div class="date_time">@DateTime.Today.Date.ToLongDateString()</div>
                 <div id="whether">
                     <a href="https://clck.yandex.ru/redir/dtype=stred/pid=7/cid=1228/*https://pogoda.yandex.ru/kharkiv" target="_blank">
                         <img src="//info.weather.yandex.net/kharkiv/4.ru.png?domain=ru" border="0" alt="Яндекс.Погода" />
                         <img width="1" height="1" src="https://clck.yandex.ru/click/dtype=stred/pid=7/cid=1227/*https://img.yandex.ru/i/pix.gif" alt="" border="0" />
                     </a>
                 </div>
-                <div id="watch"></div>
             </div>
             <div id="main_side">
                 @RenderBody()
